# agent-drift

./: .env.example  .gitignore  README.md  claude-3-haiku-report.html  gemma-2-27b-report.html  gemma-2-9b-it-report.html  linkedin-post-v2.md  linkedin-post.md  live-results-vodafone.json  llama-3.3-70b-instruct-report.html  llama-real-report.html  llama3.2-3b-report.html  multi-model-results.json  probe-results.json  pyproject.toml  qwen-25-72b-report.html  run_all_models.py  run_echo_retest.py  run_echo_test.py  run_fast_claude.py  run_local_fast.py  run_local_models.py  run_quick_compare.py  sample-report.html
agent_drift/: __init__.py  cli.py
agent_drift/agents/: llm_agent.py  openclaw_agent.py
agent_drift/core/: evaluator.py  models.py  probe.py  reporter.py  scenarios.py
agent_drift/presets/: __init__.py  default_probes.yaml  openclaw_probes.yaml
agent_drift/templates/: report.html
extension/: background.js  content.js  manifest.json  popup.html  popup.js
src/: discover.js  live-probe.js  spider.js
tests/: test_evaluator.py  test_models.py  test_probe.py  test_scenarios.py
