[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-drift"
version = "0.1.0"
description = "Stress-test AI agents for goal drift and system prompt violations"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Jon Hammant", email = "jon@example.com"},
]
keywords = ["ai", "agents", "safety", "red-team", "jailbreak", "drift", "llm", "testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/jhammant/agent-drift"
Repository = "https://github.com/jhammant/agent-drift"
"Sample Report" = "https://echo.ai.hammant.io/agent-drift/"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "aiosqlite>=0.19.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
drift = "agent_drift.cli:cli"

[tool.setuptools.packages.find]
include = ["agent_drift*"]
